# database_blocks

./: .gitignore  CMakeLists.txt  README.md  build_instruction.md  config.h  db.cpp  db.h  library.cpp  library.h  main.cpp  mem_tree_impl.cpp  mem_tree_impl.h  wal.cpp  wal.h  wal_manager.cpp  wal_manager.h
.github/workflows/: cmake.yml
libs/: CMakeLists.txt  uuid.h
libs/spdlog-1.11.0/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  appveyor.yml
libs/spdlog-1.11.0/.github/workflows/: ci.yml
libs/spdlog-1.11.0/bench/: CMakeLists.txt  async_bench.cpp  bench.cpp  formatter-bench.cpp  latency.cpp  utils.h
libs/spdlog-1.11.0/cmake/: version.rc.in
libs/spdlog-1.11.0/example/: CMakeLists.txt  example.cpp
libs/spdlog-1.11.0/include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  fwd.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h
libs/spdlog-1.11.0/include/spdlog/cfg/: helpers-inl.h  helpers.h
libs/spdlog-1.11.0/include/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
libs/spdlog-1.11.0/include/spdlog/fmt/: bin_to_hex.h
libs/spdlog-1.11.0/include/spdlog/fmt/bundled/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  xchar.h
libs/spdlog-1.11.0/include/spdlog/sinks/: ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  mongo_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
libs/spdlog-1.11.0/src/: bundled_fmtlib_format.cpp  color_sinks.cpp  file_sinks.cpp  spdlog.cpp  stdout_sinks.cpp
libs/spdlog-1.11.0/tests/: catch.hpp  includes.h  main.cpp  test_async.cpp  test_create_dir.cpp  test_daily_logger.cpp  test_dup_filter.cpp  test_errors.cpp  test_file_helper.cpp  test_file_logging.cpp  test_fmt_helper.cpp  test_misc.cpp  test_mpmc_q.cpp  test_pattern_formatter.cpp  test_registry.cpp  test_sink.h  test_stdout_api.cpp  test_time_point.cpp  utils.cpp
src/: CMakeLists.txt  config.h  db.cpp  db.h  mem_tree_impl.cpp  mem_tree_impl.h  wal.cpp  wal.h
test/: CMakeLists.txt  db_test.cpp  mem_tree_test.cc  mem_tree_test.cpp  test_normal.cc  wal_test.cpp
util/: CMakeLists.txt  uuid_util.h
